--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: practicaltest
+name: practical_test
 description: "A new Flutter project."
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -6,44 +6,26 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.4.4 <4.0.0'
+  sdk: '>=3.3.4 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-
-  #UI
-  loader_overlay: ^4.0.0
-  visibility_detector: ^0.3.2
-
-  #State managment
-  get: ^4.6.6
-  
-  #Network
-  dio: ^5.6.0
-
-  #Tools
-  path_provider: ^2.1.4
-  connectivity_plus: ^6.0.5
-  shared_preferences: ^2.3.2
-  
+  intl: ^0.19.0
+  google_fonts: ^6.2.1
+  provider: ^6.1.2
+  dio: ^5.7.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^3.0.0
-
-
+ 
 flutter:
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/
-
+  # assets:
+  # #   - images/a_dot_ham.jpeg
